// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScheduledTasksCard render selected 1`] = `
<Card
  className="tasks-donut-card scheduled-tasks-card selected-tasks-card"
  id="scheduled-tasks-card"
>
  <CardTitle
    onClick={[Function]}
  >
    Scheduled
  </CardTitle>
  <CardBody>
    <div
      className="scheduled-data"
      onClick={[Function]}
    >
      0
      <p>
        Total
      </p>
    </div>
  </CardBody>
</Card>
`;

exports[`ScheduledTasksCard render with minimal props 1`] = `
<Card
  className="tasks-donut-card scheduled-tasks-card"
  id="scheduled-tasks-card"
>
  <CardTitle
    onClick={[Function]}
  >
    Scheduled
  </CardTitle>
  <CardBody>
    <div
      className="scheduled-data"
      onClick={[Function]}
    >
      0
      <p>
        Total
      </p>
    </div>
  </CardBody>
</Card>
`;

exports[`ScheduledTasksCard render with props 1`] = `
<Card
  className="tasks-donut-card scheduled-tasks-card some-class"
  id="scheduled-tasks-card"
>
  <CardTitle
    onClick={[Function]}
  >
    Scheduled
  </CardTitle>
  <CardBody>
    <div
      className="scheduled-data"
      onClick={[Function]}
    >
      3
      <p>
        Total
      </p>
    </div>
  </CardBody>
</Card>
`;
